// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default-elements-per-page Renders \`default-sort-column\` with custom props 1`] = `
<widget-settings-item-stub
  title="Default number of elements/page"
>
  <div
    class="v-input select v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--single-line v-select"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="button"
      >
        <div
          class="v-select__slot"
        >
          <div
            class="v-select__selections"
          >
            <div
              class="v-select__selection v-select__selection--comma"
            >
              50
            </div>
            <input
              aria-readonly="false"
              autocomplete="off"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
          <input
            type="hidden"
            value="50"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;

exports[`default-elements-per-page Renders \`default-sort-column\` with custom props 2`] = `undefined`;

exports[`default-elements-per-page Renders \`default-sort-column\` with default props 1`] = `
<widget-settings-item-stub
  title="Default number of elements/page"
>
  <div
    class="v-input select v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--dense theme--light v-text-field v-text-field--single-line v-select"
  >
    <div
      class="v-input__control"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        class="v-input__slot"
        role="button"
      >
        <div
          class="v-select__slot"
        >
          <div
            class="v-select__selections"
          >
            <div
              class="v-select__selection v-select__selection--comma"
            >
              10
            </div>
            <input
              aria-readonly="false"
              autocomplete="off"
              readonly="readonly"
              type="text"
            />
          </div>
          <div
            class="v-input__append-inner"
          >
            <div
              class="v-input__icon v-input__icon--append"
            >
              <i
                aria-hidden="true"
                class="v-icon notranslate material-icons theme--light"
              >
                arrow_drop_down
              </i>
            </div>
          </div>
          <input
            type="hidden"
            value="10"
          />
        </div>
        <div
          class="v-menu"
        >
          <!---->
        </div>
      </div>
    </div>
  </div>
</widget-settings-item-stub>
`;

exports[`default-elements-per-page Renders \`default-sort-column\` with default props 2`] = `undefined`;
